Fix some misconfiguration stuff

--- a/bot.example.conf
+++ b/bot.example.conf
@@ -15,10 +15,10 @@
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
-# The server, Server to connect to (default: irc.Azuru.net)
-Server = irc.Azuru.net
+# The server, Server to connect to (default: irc.stacksmash.net)
+Server = irc.stacksmash.net
 # The main channel, joins this channel on startup (default: #Test)
-Channel = #Test, #Navn
+Channel = #Navn, #Computers
 # The bots Nickname, this is the nickname of the bot (default: Navn)
 Nick = Navn
 # The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
@@ -140,6 +140,6 @@ LogChannel = #Test
 # !!THIS IS NOT RECOMMENDED YOU CHANGE IT AS PARSING THE RETURN CAN CAUSE A CRASH!!
 WeatherURL = http://www.google.com/ig/api?weather=%l
 # This will load modules in any directory in the binary runtime, do not use absolute paths
-ModuleDir = ../modules/
+ModuleDir = ../Modules/
 # Modules to load :P
 Modules = m_system, m_modulehandler, m_help, m_ping, m_join, m_testmod, m_searcher, m_dns, m_about_me, m_ctcp, m_encyclopedia, m_weather, m_world_clock, channel_logger, m_terminal_input, da_goat, m_logchan
